--- a/css/fixedColumns.bootstrap.scss
+++ b/css/fixedColumns.bootstrap.scss
@@ -29,11 +29,11 @@ div.DTFC_RightBodyWrapper table {
 	}
 
 	// Header provides the border
-	tbody tr:first-child th,
-	tbody tr:first-child td,
-	tbody tr:first-child th,
-	tbody tr:first-child td {
-		border-top: none;
+	tbody tr:first-child {
+		th,
+		td {
+			border-top: none;
+		}
 	}
 }
 
