--- a/css/fixedColumns.bootstrap4.scss
+++ b/css/fixedColumns.bootstrap4.scss
@@ -1,11 +1,8 @@
 
 @import 'fixedColumns.bootstrap.scss';
 
-// Bootstrap 4 uses rgba for the table background colours, so we need to
-// block them out
-table.dataTable.table-striped.DTFC_Cloned tbody tr:nth-of-type(odd) {
-    background-color: #F3F3F3;
-}
-table.dataTable.table-striped.DTFC_Cloned tbody tr:nth-of-type(even) {
+// Bootstrap 4 uses rgba for the table row background colours, and as FixedColumns
+// layers the elements on top of each other, we need to block out the fixed area.
+table.dataTable.table-striped.DTFC_Cloned tbody {
     background-color: white;
 }
