--- a/css/fixedColumns.bootstrap.scss
+++ b/css/fixedColumns.bootstrap.scss
@@ -14,6 +14,7 @@ div.DTFC_LeftBodyWrapper table,
 div.DTFC_RightBodyWrapper table {
 	border-top: none;
 	margin: 0 !important;
+	z-index: 2;
 
 	// Hide sorting icons
 	thead {
