Fix: Support for Scroller with Foundation and FixedColumns

--- a/css/fixedColumns.foundation.scss
+++ b/css/fixedColumns.foundation.scss
@@ -26,6 +26,7 @@ div.DTFC_RightBodyWrapper table {
 div.DTFC_LeftFootWrapper table,
 div.DTFC_RightFootWrapper table {
 	margin-top: 0 !important;
+	z-index: 2;
 }
 
 // Block out the gap above the scrollbar on the right, when there is a fixed
