Fix - styling: When used with Bootstrap's `table-sm` the asc sorting arrow could be seen in the fixed column.
- Thread https://datatables.net/forums/discussion/comment/150939
- Many thanks to Kevin for the test case

--- a/css/fixedColumns.bootstrap.scss
+++ b/css/fixedColumns.bootstrap.scss
@@ -18,13 +18,16 @@ div.DTFC_RightBodyWrapper table {
 
 	// Hide sorting icons
 	thead {
-		.sorting:after,
-		.sorting_asc:after,
-		.sorting_desc:after,
-		.sorting:after,
-		.sorting_asc:after,
-		.sorting_desc:after {
-			display: none;
+		.sorting,
+		.sorting_asc,
+		.sorting_desc,
+		.sorting,
+		.sorting_asc,
+		.sorting_desc {
+			&:before,
+			&:after {
+				display: none;
+			}
 		}
 	}
 
