fix: Fix styling issues with BS5 integration
Jira Issue DD-1961

--- a/css/fixedColumns.bootstrap5.scss
+++ b/css/fixedColumns.bootstrap5.scss
@@ -6,3 +6,18 @@
 table.dataTable.table-striped.DTFC_Cloned tbody {
     background-color: white;
 }
+
+table.dataTable {
+    th {
+        border-bottom-color: #DEE2E6;
+    }
+}
+
+div.dataTables_scrollBody,
+div.DTFC_LeftBodyLiner {
+    thead {
+        tr {
+            height: 0px !important;
+        }
+    }
+}
