--- a/css/fixedColumns.jqueryui.scss
+++ b/css/fixedColumns.jqueryui.scss
@@ -1,16 +1,12 @@
-
-div.DTFC_LeftWrapper table.dataTable,
-div.DTFC_RightWrapper table.dataTable {
-	z-index: 2;
-
-	&.no-footer {
-		border-bottom: none;
+table.dataTable{
+	th{
+		background-color: rgb(246, 246, 246) !important;
+		z-index: 1;
 	}
 }
 
-// Block out the gap above the scrollbar on the right, when there is a fixed
-// right column
-div.DTFC_Blocker {
-	background-color: white;
+div.dtfc-right-top-blocker {
+	border-bottom: none !important;
+	background-color: rgb(246, 246, 246) !important;
+	border-top: 1px solid #c5c5c5 !important;
 }
-
