--- a/css/fixedColumns.dataTables.scss
+++ b/css/fixedColumns.dataTables.scss
@@ -1,27 +1,24 @@
-
-// Block out what is behind the fixed column's header and footer
-table.DTFC_Cloned thead,
-table.DTFC_Cloned tfoot {
-	background-color: white;
-}
-
-// Block out the gap above the scrollbar on the right, when there is a fixed
-// right column
-div.DTFC_Blocker {
-	background-color: white;
-}
-
-div.DTFC_LeftWrapper table.dataTable,
-div.DTFC_RightWrapper table.dataTable {
-	margin-bottom: 0;
-	z-index: 2;
-
-	&.no-footer {
-		border-bottom: none;
-	}
-}
-
 // make the row transparent to make the message below visible
 table.dataTable.display tbody tr.DTFC_NoData {
   background-color: transparent;
+}
+
+tr.even td {
+    background-color: #ffffff;
+}
+
+tr.odd td {
+    background-color: #f9f9f9;
+}
+
+tr.selected td {
+    background-color: #a6b4cd;
+}
+
+thead th {
+	background-color: white;
+}
+
+tfoot th {
+	background-color: white;
 }
