--- a/css/fixedColumns.foundation.scss
+++ b/css/fixedColumns.foundation.scss
@@ -1,37 +1,29 @@
+table.dataTable {
 
+	tbody {
+		border-left: none;
+	}
 
-div.DTFC_LeftHeadWrapper table,
-div.DTFC_LeftBodyWrapper table,
-div.DTFC_LeftFootWrapper table {
-	border-right-width: 0;
+	th{
+		background-color: rgb(248, 248, 248);
+	}
+
+	tr.odd{
+		td {
+			background-color: white;
+		}
+
+	}
+
+	thead,
+	th:first-child,
+	td:first-child {
+		border-left: 0px solid rgb(241, 241, 241);
+	}
+
+	tr.even {
+		td {
+			background-color: #f1f1f1;
+		}
+	}
 }
-
-div.DTFC_RightHeadWrapper table,
-div.DTFC_RightBodyWrapper table,
-div.DTFC_RightFootWrapper table {
-	border-left-width: 0;
-}
-
-div.DTFC_LeftHeadWrapper table,
-div.DTFC_RightHeadWrapper table {
-	margin-bottom: 0 !important;
-}
-
-div.DTFC_LeftBodyWrapper table,
-div.DTFC_RightBodyWrapper table {
-	border-top: none;
-	margin: 0 !important;
-}
-
-div.DTFC_LeftFootWrapper table,
-div.DTFC_RightFootWrapper table {
-	margin-top: 0 !important;
-	z-index: 2;
-}
-
-// Block out the gap above the scrollbar on the right, when there is a fixed
-// right column
-div.DTFC_Blocker {
-	background-color: white;
-}
-
