dev: Small styling improvement for foudnation

--- a/css/fixedColumns.foundation.scss
+++ b/css/fixedColumns.foundation.scss
@@ -27,3 +27,9 @@ table.dataTable {
 		}
 	}
 }
+
+div.dtfc-right-top-blocker {
+	background-color: #f8f8f8 !important;
+	margin-top: 7px;
+	border-bottom: none !important;
+}
