--- a/css/fixedColumns.semanticui.scss
+++ b/css/fixedColumns.semanticui.scss
@@ -25,3 +25,17 @@ table.dataTable {
 div.dtfc-right-top-blocker {
 	border-bottom: none !important;
 }
+
+tr.dt-rowReorder-moving {
+    td.dtfc-fixed-left,
+    td.dtfc-fixed-right {
+        border-top: 2px solid #888 !important;
+        border-bottom: 2px solid #888 !important;
+    }
+    td.dtfc-fixed-left:first-child {
+        border-left: 2px solid #888 !important;
+    }
+    td.dtfc-fixed-right:last-child {
+        border-right: 2px solid #888 !important;
+    }
+}
