--- a/css/fixedColumns.foundation.scss
+++ b/css/fixedColumns.foundation.scss
@@ -33,3 +33,17 @@ div.dtfc-right-top-blocker {
 	margin-top: 7px;
 	border-bottom: none !important;
 }
+
+tr.dt-rowReorder-moving {
+    td.dtfc-fixed-left,
+    td.dtfc-fixed-right {
+        border-top: 2px solid #888 !important;
+        border-bottom: 2px solid #888 !important;
+    }
+    td.dtfc-fixed-left:first-child {
+        border-left: 2px solid #888 !important;
+    }
+    td.dtfc-fixed-right:last-child {
+        border-right: 2px solid #888 !important;
+    }
+}
