fix: Fix issue with BS table-bordered not having left border when fixed columns on page but not active
Jira Issue DD-2223

--- a/css/fixedColumns.bootstrap.scss
+++ b/css/fixedColumns.bootstrap.scss
@@ -29,8 +29,14 @@ div.dtfc-left-top-blocker {
 	border-bottom: 0px solid #ddd !important;
 }
 
-table.dataTable.table-bordered {
+table.dataTable.table-bordered.dtfc-has-left {
 	border-left: none;
+}
+
+div.dataTables_scroll.dtfc-has-left {
+    table.table-bordered {
+        border-left: none;
+    }   
 }
 
 div.dataTables_scrollBody {
