--- a/css/fixedColumns.bootstrap5.scss
+++ b/css/fixedColumns.bootstrap5.scss
@@ -14,7 +14,7 @@ table.dataTable {
     }
 }
 
-table.dataTable.table-bordered {
+table.dataTable.table-bordered.dtfc-has-left {
     tr{
         td{
             border-left: none;
