Fix: Bootstrap integration didn't work correctly with 5.1.2 and Select. Note this needs an update to Select as well.
https://datatables.net/forums/discussion/72133

--- a/css/fixedColumns.bootstrap.scss
+++ b/css/fixedColumns.bootstrap.scss
@@ -2,15 +2,21 @@
 table.dataTable {
     thead, tfoot {
         th, td {
-            background-color: white;
+            &.dtfc-fixed-left,
+            &.dtfc-fixed-right {
+                background-color: white !important;
+            }
         }
     }
 
     tbody {
         tr td {
-            // Need to provide a background colour, otherwise the fixed elements are
-            // transparent and unreadable.
-            background-color: #ffffff;
+            &.dtfc-fixed-left,
+            &.dtfc-fixed-right {
+                // Need to provide a background colour, otherwise the fixed elements are
+                // transparent and unreadable.
+                background-color: #ffffff;
+            }
         }
     }
 
