--- a/css/fixedColumns.jqueryui.scss
+++ b/css/fixedColumns.jqueryui.scss
@@ -1,8 +1,23 @@
 table.dataTable{
-	th{
-		background-color: rgb(246, 246, 246) !important;
-		z-index: 1;
-	}
+	thead,
+    tfoot {
+        th{
+            background-color: rgb(246, 246, 246) !important;
+            z-index: 1;
+        }
+    }
+
+    tr.even td {
+        background-color: #ffffff;
+    }
+
+    tr.odd td {
+        background-color: #f9f9f9;
+    }
+
+    tr.selected td {
+        background-color: #a6b4cd;
+    }
 }
 
 div.dtfc-right-top-blocker {
