--- a/css/fixedColumns.dataTables.scss
+++ b/css/fixedColumns.dataTables.scss
@@ -8,7 +8,9 @@ table.dataTable {
     tfoot {
         tr > .dtfc-fixed-left,
         tr > .dtfc-fixed-right {
-            z-index: 1;
+            top: 0;
+            bottom: 0;
+            z-index: 3;
             background-color: $fixedcolumns-header-color;
         }
     }
