New: Full support for right-to-left languages New: `-init fixedColumns.start` and `-init fixedColumns.end` to fix columns regardless of text direction New: `-api fixedColumns().start()` and `-api fixedColumns().end()` getter and setters for the new options Updated: `-init fixedColumns.left` and `-init fixedColumns.right` now text direction aware. i.e. when used they will always operate on the left or right, reagrdless of text direction. Updated: `-api fixedColumns().left()` and `-api fixedColumns().right()` also not text direction aware. Updated: Class names updates to reflect the primary use case of start / end
Tests and docs added

--- a/css/fixedColumns.bootstrap.scss
+++ b/css/fixedColumns.bootstrap.scss
@@ -1,28 +1,28 @@
 
 @import 'fixedColumns.dataTables.scss';
 
-div.dtfc-right-top-blocker,
-div.dtfc-left-top-blocker {
+div.dtfc-top-blocker,
+div.dtfc-top-blocker {
 	margin-top: 6px;
 	border-bottom: 0px solid #ddd !important;
 }
 
-table.dataTable.table-bordered.dtfc-has-left {
+table.dataTable.table-bordered.dtfc-has-start {
 	border-left: none;
 }
 
-div.dataTables_scroll.dtfc-has-left {
+div.dt-scroll.dtfc-has-start {
     table.table-bordered {
         border-left: none;
     }   
 }
 
-div.dataTables_scrollBody {
+div.dt-scroll-body {
 	border-left: 1px solid #ddd !important;
 }
 
-div.dataTables_scrollFootInner,
-div.dataTables_scrollHeadInner{
+div.dt-scroll-headInner,
+div.dt-scroll-footInner {
 	table.table-bordered {
 		tr {
 			th:first-child {
