--- a/css/fixedColumns.foundation.scss
+++ b/css/fixedColumns.foundation.scss
@@ -3,7 +3,7 @@ $fixedcolumns-header-color: rgb(248, 248, 248) !default;
 
 @import 'fixedColumns.dataTables.scss';
 
-table.dataTable.dtfc-has-left {
+table.dataTable.dtfc-has-start {
 	tbody {
 		border-left: none;
 	}
