--- a/css/fixedColumns.bulma.scss
+++ b/css/fixedColumns.bulma.scss
@@ -2,6 +2,24 @@
 
 @import 'fixedColumns.dataTables.scss';
 
+table.dataTable {
+	// Due to Chrome https://bugs.chromium.org/p/chromium/issues/detail?id=712847
+	// And Firefox https://bugzilla.mozilla.org/show_bug.cgi?id=1450584
+	// It isn't possible to use border-collapse with FixedColumns, which
+	// make use of position: sticky
+	border-collapse: separate;
+
+	&.table-bordered {
+		border-left-width: 0;
+		border-bottom-width: 0;
+
+		th, td {
+			border-right-width: 0;
+			border-top-width: 0;
+		}
+	}
+}
+
 div.dtfc-top-blocker {
 	border-bottom: none !important;
 }
