Dev: Update class names on tables held in position by FixedHeader
DD-2894

--- a/css/fixedColumns.dataTables.scss
+++ b/css/fixedColumns.dataTables.scss
@@ -64,7 +64,8 @@ table.dataTable {
     }
 }
 
-div.dt-scroll {
+div.dt-scroll,
+div.dtfh-floatingparent {
     position: relative;
 
     div.dtfc-top-blocker,
